align img fix

--- a/style.css
+++ b/style.css
@@ -191,6 +191,16 @@ div.art-box>div.art-left>p{
     color: rgba(0, 0, 0, 0.600);
 }
 
+/*Ellipsis*/
+
+.ellipsis {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+
 /*Info*/
 
 
@@ -231,7 +241,7 @@ div.art-box>div.art-img>img{
 
 div.art-box>div.art-img{
     position: relative;
-    margin: 0 20px;
+    margin-left: 25px;
 }
 
 div.art-box>div.art-img::before {
@@ -243,7 +253,7 @@ div.art-box>div.art-img::before {
     right: 0;
     background-color: rgba(0, 0, 0, 0.5);
     opacity: 0;
-    transition: opacity 0.3s ease-out;
+    transition: all 0.3s ease-out;
 }
 
 div.art-box>div.art-img:hover::before{
@@ -254,7 +264,7 @@ div.art-box>div.art-img>i{
     color: rgba(255, 255, 255, 0.449);
     font-size: 32px;
     position: absolute;
-    top: 80px;
+    top: 65px;
     left: 100px;
     transition: all 0.4s ease-out;
     transform: scale(0);
